--- a/index.html
+++ b/index.html
@@ -5,15 +5,28 @@
 </head>
 <body>
 	<main>
+		<header>
+			<div class="container">
+				<div class="column">
+					<div class="my-brand-name">
+						<a href="#about">David</a>
+					</div>
+				</div>
+			</div>
+		</header>
 		<!-- landing page section -->
 		<section class="intro landing-page">
 			<div class="container">
 				<div class="column">
 					<div class="introductions">
 						<div class="block">
+							<img src="/devu.jpg" alt="My Photo">
 							<h6>Hi,</h6>
-							<h1>David Uwayezu</h1>
+							<h1>I'm <span class="span-one">D</span>avid,</h1>
 							<h3>Software Engineer</h3>
+							<div>
+								<a href="">Contact Me</a>
+							</div>
 						</div>
 					</div>
 					
