Adding navigation icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 					<div class="my-brand-name">
 						<a href="#about">David</a>
 					</div>
+					<div class="nav-bar">
+						<ul>
+							<li><a href="#home" class="active"><img src="Home.png"></a></li>
+							<li><a href="#about"><img src="profile.png"></a></li>
+							<li><a href="#services"><img src=""></a></li>
+							<li><a href="#work"><img src=""></a></li>
+							<li><a href="#contact"><img src="contactMe.png"></a></li>
+						</ul>
+					
+					</div>
 				</div>
 			</div>
 		</header>
