--- a/UI/Landing-page/index.html
+++ b/UI/Landing-page/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
+	<meta charset="utf-8">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
@@ -11,7 +12,7 @@
 			<div class="container">
 				<div class="column">
 					<div class="my-brand-name">
-						<a href="#home">David</a>
+						<a href="index.html"><img src="Capture.JPG"></a>
 					</div>
 					
 						<div class="nav-bar">
