--- a/UI/Contact-Me-Page/contact.html
+++ b/UI/Contact-Me-Page/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Contact Me</title>
 	
-	<link rel="stylesheet" type="text/css" href="C:\Applications\MyBrandWebsite\My-Brand-David-Uwayezu\UI\Landing-page\index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<link rel="stylesheet" type="text/css" href="contact.css">
 	<script src="https://kit.fontawesome.com/de5b2b25e1.js" crossorigin="anonymous"></script>
 
@@ -47,7 +47,7 @@
 				</form>
 
 			</div>
-			
+
 
 			
 		</section>
