--- a/UI/Landing-page/index.html
+++ b/UI/Landing-page/index.html
@@ -13,9 +13,9 @@
 	<main>
 		
 		<div class="sider-bar " id="icons">
-			<header><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.html""><img src="Capture.JPG"></a></header>
+			<header><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.html"><img src="Capture.JPG"></a></header>
 			<ul>
-				<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.html"" ><i class="fas fa-home icon active"></i></a></li>
+				<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.html" ><i class="fas fa-home icon active"></i></a></li>
 				<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\About-Me-Page\about.html"><i class="fa fa-fw fa-user icon"></i></a></li>
 				<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Skills-page\skills.html"><i class="fas fa-cog icon"></i></a></li>
 				<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\work-page\work.html"><i class="fa fa-fw fa-wrench icon"></i></a></li>
