Designing my about me page

--- a/UI/Landing-page/index.html
+++ b/UI/Landing-page/index.html
@@ -52,7 +52,7 @@
 							<h1 class="white-color">I'm <span class="span-one">d</span>avid,</h1>
 							<h3 class="white-color">Software Engineer.</h3>
 							<div>
-								<a href="C:\Applications\MyBrandWebsite\My-Brand-David-Uwayezu\UI\Contact-Me-Page\contact.html" class="anchor">Contact Me</a>
+								<a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Contact-Me-Page\contact.html" class="anchor">Contact Me</a>
 
 							</div>
 							
