--- a/UI/work-page/work.html
+++ b/UI/work-page/work.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>My skills</title>
-	<link rel="stylesheet" type="text/css" href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.css">
-	<link rel="stylesheet" type="text/css" href="skills.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Works</title>
+    <link rel="stylesheet" type="text/css" href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.css">
+	<link rel="stylesheet" type="text/css" href="work.css">
 	<script src="https://kit.fontawesome.com/de5b2b25e1.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-	<main>
+    <main>
+        <div>
+			<a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Blog-Page\blog.html"><p id="wall">Wall </p></a>	 
+			
+		</div>
 		<section>
+			
 			<div class="sider-bar " id="icons">
 				<header><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.html"><img src="Capture.JPG"></a></header>
 				<ul>
@@ -31,8 +40,7 @@
 					</ul>
 				</div>
 			</div>
-		</section>
-	</main>
-
+    </main>
+    
 </body>
 </html>
