Fixing my about me page

--- a/UI/Blog-Page/Sign UP and Sign In Page/signup.html
+++ b/UI/Blog-Page/Sign UP and Sign In Page/signup.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Blog</title>
-	<link rel="stylesheet" type="text/css" href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.css">
-	<link rel="stylesheet" type="text/css" href="blog.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sign Up</title>
+    <link rel="stylesheet" type="text/css" href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.css">
+	<link rel="stylesheet" type="text/css" href="signup.css">
 	<script src="https://kit.fontawesome.com/de5b2b25e1.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-	<main>
+    <main>
+        <div>
+			<a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Blog-Page\blog.html"><p id="wall">Wall </p></a>	 
+			
+		</div>
 		<section>
+			
 			<div class="sider-bar " id="icons">
 				<header><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Landing-page\index.html"><img src="Capture.JPG"></a></header>
 				<ul>
@@ -31,24 +40,7 @@
 					</ul>
 				</div>
 			</div>
-		</section>
-		<section>
-			<div>
-				<a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Blog-Page\blog.html"><p id="wall">Wall </p></a>	 
-				
-			</div>
-		</section>
-		<section class="nav-bar">
-			<div class="navs">
-				<ul>
-					<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Blog-Page\Sign UP and Sign In Page\signup.html" class="active">Sign Up</a></li>
-					<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Blog-Page\Sign UP and Sign In Page\signin.html">Sign In</a></li>
-					<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Blog-Page\">Recent post</a></li>
-					<li><a href="C:\Applications\mybrandwebsiteportfolio\My-Brand-David-Uwayezu\UI\Blog-Page\">Latest post</a></li>
-				</ul>
-			</div>
-		</section>
-	</main>
-
+    </main>
+    
 </body>
 </html>
