--- a/UI/Landing-page/About-Me-Page/about.html
+++ b/UI/Landing-page/About-Me-Page/about.html
@@ -10,14 +10,14 @@
 	<main>
 		<section>
 			<div class="sider-bar " id="icons">
-				<header><a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\Landing-page\index.html"><img src="Capture.JPG"></a></header>
+				<header><a href="../index.html"><img src="Capture.JPG"></a></header>
 				<ul>
-					<li><a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\Landing-page\index.html" ><i class="fas fa-home icon active"></i></a></li>
-					<li><a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\About-Me-Page\about.html"><i class="fa fa-fw fa-user icon"></i></a></li>
-					<li><a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\Skills-page\skills.html"><i class="fas fa-cog icon"></i></a></li>
-					<li><a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\work-page\work.html"><i class="fa fa-fw fa-wrench icon"></i></a></li>
-					<li><a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\Contact-Me-Page\contact.html"><i class="far fa-envelope icon"></i></a></li>
-					<li><a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\Blog-Page\blog.html"><i class="fas fa-blog icon"></i></a></li>
+					<li><a href="../index.html" ><i class="fas fa-home icon active"></i></a></li>
+					<li><a href="./about.html"><i class="fa fa-fw fa-user icon"></i></a></li>
+					<li><a href="../skills.html"><i class="fas fa-cog icon"></i></a></li>
+					<li><a href="work-page\work.html"><i class="fa fa-fw fa-wrench icon"></i></a></li>
+					<li><a href="Contact-Me-Page\contact.html"><i class="far fa-envelope icon"></i></a></li>
+					<li><a href="Blog-Page\blog.html"><i class="fas fa-blog icon"></i></a></li>
 
 					
 				</ul>
@@ -37,7 +37,7 @@
 
 		<section class="about" id="about">
 			<div>
-				<a href="C:\Applications\mybrand\My-Brand-David-Uwayezu\UI\Blog-Page\blog.html"><p id="wall">Wall </p></a>	 
+				<a href="Blog-Page\blog.html"><p id="wall">Wall </p></a>	 
 				
 			</div>
 			<div class="container">
