Creating and designing all pages with responsiveness

--- a/UI/Blog-Page/signin.html
+++ b/UI/Blog-Page/signin.html
@@ -9,23 +9,23 @@
 	<main>
 		<section>
 			<div class="sider-bar " id="icons">
-				<header><a href="../Landing-page/index.html"><img src="../Assets/Images/Capture.JPG"></a></header>
+				<header><a href="../Landing-page/index.html"><img src="../Assets/Images/Capture.JPG" width="90px"></a></header>
 				<ul>
-					<li><a href="../Landing-page/index.html" ><i class="fas fa-home icon active"></i></a></li>
-					<li><a href="../About-Me-Page/about.html"><i class="fa fa-fw fa-user icon"></i></a></li>
-					<li><a href="../Skills-page/skills.html"><i class="fas fa-cog icon"></i></a></li>
-					<li><a href="../work-page/work.html"><i class="fa fa-fw fa-wrench icon"></i></a></li>
-					<li><a href="../Contact-Me-Page/contact.html"><i class="far fa-envelope icon"></i></a></li>
-					<li><a href="../Blog-Page/blog.html"><i class="fas fa-blog icon"></i></a></li>
+					<li><a href="../Landing-page/index.html" ><i class="fas fa-home icon active"></i>Home</a></li>
+					<li><a href="../About-Me-Page/about.html"><i class="fa fa-fw fa-user icon"></i>About</a></li>
+					<li><a href="../Skills-page/skills.html"><i class="fas fa-cog icon"></i>Skills</a></li>
+					<li><a href="../work-page/work.html"><i class="fa fa-fw fa-wrench icon"></i>Works</a></li>
+					<li><a href="../Contact-Me-Page/contact.html"><i class="far fa-envelope icon"></i>Contact</a></li>
+					<li><a href="../Blog-Page/blog.html"><i class="fas fa-blog icon"></i>Blogs</a></li>
 					
 				</ul>
 				<div class="social-links">
 					<ul>
-						<li><a href="https://www.instagram.com/david_uwayezu/?hl=en" target="_blank" ><i  class="fa fa-instagram  start-social-links"></i></a></li>
-						<li><a href="https://web.facebook.com/david.uwayezu" target="_blank"><i  class="fa fa-facebook "></i></a></li>
-						<li><a href="https://www.linkedin.com/in/david-uwayezu-77b94b145/" target="_blank" ><i  class="fa fa-linkedin "></i></a></li>
-						<li><a href="" target="_blank" ><i class="fa fa-twitter "></i></a></li>
-						<li><a href="https://github.com/devu2" target="_blank" ><i  class="fa fa-github  end-social-links"></i></a></li>
+						<li><a href="https://www.instagram.com/david_uwayezu/?hl=en" target="_blank" ><i  class="fa fa-instagram  start-social-links"></i>Instagram</a></li>
+						<li><a href="https://web.facebook.com/david.uwayezu" target="_blank"><i  class="fa fa-facebook "></i>Facebook</a></li>
+						<li><a href="https://www.linkedin.com/in/david-uwayezu-77b94b145/" target="_blank" ><i  class="fa fa-linkedin "></i>Linkedin</a></li>
+						<li><a href="" target="_blank" ><i class="fa fa-twitter "></i>Twitter</a></li>
+						<li><a href="https://github.com/devu2" target="_blank" ><i  class="fa fa-github  end-social-links"></i>Github</a></li>
 					</ul>
 				</div>
 			</div>
