--- a/UI/Blog-Page/blog.html
+++ b/UI/Blog-Page/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Blog</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/CSS/index.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/CSS/blog.css">
@@ -11,24 +12,25 @@
 <body>
 	<main>
 		<section>
+			
 			<div class="sider-bar " id="icons">
-				<header><a href="../Landing-page/index.html"><img src="../Assets/Images/Capture.JPG"></a></header>
+				<header><a href="../Landing-page/index.html"><img src="../Assets/Images/Capture.JPG" width="90px"></a></header>
 				<ul>
-					<li><a href="../Landing-page/index.html" ><i class="fas fa-home icon active"></i></a></li>
-					<li><a href="../About-Me-Page/about.html"><i class="fa fa-fw fa-user icon"></i></a></li>
-					<li><a href="../Skills-page/skills.html"><i class="fas fa-cog icon"></i></a></li>
-					<li><a href="../work-page/work.html"><i class="fa fa-fw fa-wrench icon"></i></a></li>
-					<li><a href="../Contact-Me-Page/contact.html"><i class="far fa-envelope icon"></i></a></li>
-					<li><a href="../Blog-Page/blog.html"><i class="fas fa-blog icon"></i></a></li>
+					<li><a href="../Landing-page/index.html" ><i class="fas fa-home icon active"></i>Home</a></li>
+					<li><a href="../About-Me-Page/about.html"><i class="fa fa-fw fa-user icon"></i>About</a></li>
+					<li><a href="../Skills-page/skills.html"><i class="fas fa-cog icon"></i>Skills</a></li>
+					<li><a href="../work-page/work.html"><i class="fa fa-fw fa-wrench icon"></i>Works</a></li>
+					<li><a href="../Contact-Me-Page/contact.html"><i class="far fa-envelope icon"></i>Contact</a></li>
+					<li><a href="../Blog-Page/blog.html"><i class="fas fa-blog icon"></i>Blogs</a></li>
 					
 				</ul>
 				<div class="social-links">
 					<ul>
-						<li><a href="https://www.instagram.com/david_uwayezu/?hl=en" target="_blank" ><i  class="fa fa-instagram  start-social-links"></i></a></li>
-						<li><a href="https://web.facebook.com/david.uwayezu" target="_blank"><i  class="fa fa-facebook "></i></a></li>
-						<li><a href="https://www.linkedin.com/in/david-uwayezu-77b94b145/" target="_blank" ><i  class="fa fa-linkedin "></i></a></li>
-						<li><a href="" target="_blank" ><i class="fa fa-twitter "></i></a></li>
-						<li><a href="https://github.com/devu2" target="_blank" ><i  class="fa fa-github  end-social-links"></i></a></li>
+						<li><a href="https://www.instagram.com/david_uwayezu/?hl=en" target="_blank" ><i  class="fa fa-instagram  start-social-links"></i>Instagram</a></li>
+						<li><a href="https://web.facebook.com/david.uwayezu" target="_blank"><i  class="fa fa-facebook "></i>Facebook</a></li>
+						<li><a href="https://www.linkedin.com/in/david-uwayezu-77b94b145/" target="_blank" ><i  class="fa fa-linkedin "></i>Linkedin</a></li>
+						<li><a href="" target="_blank" ><i class="fa fa-twitter "></i>Twitter</a></li>
+						<li><a href="https://github.com/devu2" target="_blank" ><i  class="fa fa-github  end-social-links"></i>Github</a></li>
 					</ul>
 				</div>
 			</div>
@@ -39,16 +41,27 @@
 				
 			</div>
 		</section>
-		<section class="nav-bar">
-			<div class="navs">
-				<ul>
-					<li><a href="../Blog-Page/signup.html" class="active">Sign Up</a></li>
-					<li><a href="../Blog-Page/signin.html">Sign In</a></li>
-					<li><a href="#">Recent post</a></li>
-					<li><a href="#">Latest post</a></li>
-					<li><a href="#">User</a></li>
-				</ul>
+		<section >
+			<div class="navs" id="my-navs">
+				<a href="../Blog-Page/signup.html" >Sign Up</a>
+				<a href="../Blog-Page/signin.html" >Sign In</a>
+				<a href="#" class="active">Recent Post</a>
+				<a href="#">Latest Post</a>
+				<a href="../User-se/p.html"><i class="far fa-user-circle"></i></a>
+				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				  <i class="fa fa-bars"></i>
+				</a>
 			</div>
+			<script>
+				function myFunction() {
+				  var x = document.getElementById("my-navs");
+				  if (x.className === "navs") {
+					x.className += " responsive";
+				  } else {
+					x.className = "navs";
+				  }
+				}
+			</script>
 			<div class="our-blog">
 				<h1 class="our-blogs-title">Our Blogs</h1>
 				<div class="row">
