Fixing blog page for learnig sioftware engineering

--- a/UI/Blog-Page/blog.html
+++ b/UI/Blog-Page/blog.html
@@ -123,7 +123,7 @@
 						<div class="one-blog">
 							<p class="blog-owner">By Owner <span>July 24, 2020</span></p>
 							<img src="../Assets/Images/cover1.jpg" alt="">
-							<h3><a href="#">Learn Software Engineering</a></h3>
+							<h3><a href="../Blog-Page/page1.html">Learn Software Engineering</a></h3>
 							<p class="text-of-blog">Kitty ipsum dolor sit amet, 
 								shed everywhere shed everywhere stretching attack your ankles chase the red dot,
 								 hairball run catnip eat the grass sniff.<span id="dots-for-more">...</span><span id="read-more">ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot,
@@ -148,7 +148,7 @@
 						<div class="one-blog">
 							<p class="blog-owner">By Owner <span>July 24, 2020</span></p>
 							<img src="../Assets/Images/cover1.jpg" alt="">
-							<h3><a href="#">Learn Software Engineering</a></h3>
+							<h3><a href="../Blog-Page/page1.html">Learn Software Engineering</a></h3>
 							<p class="text-of-blog">Kitty ipsum dolor sit amet, 
 								shed everywhere shed everywhere stretching attack your ankles chase the red dot,
 								 hairball run catnip eat the grass sniff.<span id="dots-for-moreUno">...</span><span id="uno">ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot,
@@ -174,7 +174,7 @@
 						<div class="one-blog">
 							<p class="blog-owner">By Owner <span>July 24, 2020</span></p>
 							<img src="../Assets/Images/cover1.jpg" alt="">
-							<h3><a href="#">Learn Software Engineering</a></h3>
+							<h3><a href="../Blog-Page/page1.html">Learn Software Engineering</a></h3>
 							<p class="text-of-blog">Kitty ipsum dolor sit amet, 
 								shed everywhere shed everywhere stretching attack your ankles chase the red dot,
 								 hairball run catnip eat the grass sniff.<span id="dots-for-moreDuo">...</span><span id="duo">ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot,
