fixing validation and firebase

--- a/UI/Contact-Me-Page/contact.html
+++ b/UI/Contact-Me-Page/contact.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../Assets/CSS/index.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/CSS/contact.css">
 	<script src="https://kit.fontawesome.com/de5b2b25e1.js" crossorigin="anonymous"></script>
-	<!-- <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase.js"></script> -->
+	
 	
 	
 	
@@ -90,9 +90,8 @@
 			<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
 			<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
 			<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-database.js"></script>
-			<script src="contact.js"></script>
-			<script  src="app.js"></script>
-
+			<script src="./contact.js"></script>
+			 
 
 			
 		</section>
