--- a/UI/Blog-Page/edit.html
+++ b/UI/Blog-Page/edit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,7 +40,7 @@
             </ul>
         </div>
     </div>
-  
 
-
-
+    
+</body>    
+</html>
